--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="lib/react.development.js"></script>
   <script src="lib/react-dom.development.js"></script>
   <script src="lib/react-router-dom.min.js"></script>
+  <script src="https://kit.fontawesome.com/62b99758ab.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="assets/css/main.css">
   <title>Appsus</title>
 </head>
