--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="root">
+    <canvas id="canvas" width="200" height="100" hidden></canvas>
+  </div>
 
   <script type="module/babel" data-presets="ca-preset" src="app.js"></script>
   <script src="lib/loadBabelModules.js"></script>
